Fix: correct security filter chain order for permitAll routes e